--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -84,7 +84,10 @@ Dans l'effervescence de la compétition, il est tentant de se plonger dans le co
 
 Les membres de l'équipe Leebly ont beaucoup renchéri sur la valeur de travailler en courtes itérations : c'est une leçon qu'ils disent avoir appris de leur expérience passée avec Blitz. Lors des éditions précédentes, ils auraient probablement commencé par essayer d'implémenter une stratégie d'attaque où l'on envoie les membres sur la "meilleure" tourelle d'attaque pour attaquer les ennemis. Cette année, ils ont commencé par implémenter une stratégie bien plus rudimentaire, soit d'envoyer les membres sur n'importe quelle tour libre disponible, et ils ont peu à peu raffiné leur implémentation, réparé leurs bogues et expérimenter en regardant des parties contre les autres équipes. Ce n'est que plus tard dans la journée, alors qu'ils étaient déjà en bonne position dans le classement, qu'ils se sont attaqués à la question du choix de tourelle optimale. Or, leurs essais n'ont pas donné de meilleurs résultats que leur stratégie plus naïve sans priorisation et ils ont donc laissé tomber cette avenue. Ainsi, lors de la finale, c'est leur stratégie plus simple qui leur a permis de gagner. Les plus petites itérations leur a permis d'en arriver à une solution fonctionnelle, gagner de l'information sur leur performance, et même incidemment trouver une meilleure solution à moins effort.
 
-PLACEHOLDER: Ajouter GIF de Leebly en final
+<figure>
+  <img src="{{ site.baseurl }}/images/2024-02-09-coveo-blitz-2024/Blitz-Leebly-finale.gif">
+  <figcaption>Lors de la finale, Leebly, malgré une tourelle qui tire dans le vide, gruge petit à petit les points de vie de son adversaire, Les_Avaturiers, et sortira vainqueur de cette manche </figcaption>
+</figure>
 
 Selon mon expérience, plus les itérations sont simples et courtes, plus les bogues sont faciles à trouver, et plus on peut avoir un feedback rapide. Un autre exemple de simplicité mentionné par Leebly est leur choix de stratégie défensive de dernier recours. Ils m'ont expliqué que lorsque leur niveau de vie était très bas, ils envoient tous les membres d'équipages manier une station de bouclier, leur raisonnement étant qu'en était en situation critique, les débris de l'espace auraient raison d'eux, mais peut-être aussi de leurs adversaires. Le seuil utilisé pour déterminer le déclencheur de cette solution d'urgence lui a toutefois été déterminé avec beaucoup d'essai erreur, c'est-à-dire, en changeant la valeur, en regardant quelques matches, et en réajustant au besoin. Bref, il n'y a pas de trop petites ou trop simples itérations à Blitz!
 
