--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -16,7 +16,7 @@ Cette année, notre défi revêt le thème de l'espace : chaque équipe est aux
 
 <!-- more -->
 
-À noter que j'ai moi-même expérimenté le jeu dans un cadre assez différent que celui du jour de la compétition : afin de préparer le tournoi, nous sommes invités à jouer le rôle de "beta tester" pour l'évènement et à concevoir un _bot_ en solo histoire de non seulement trouver et réparer le plus de bugs possibles, mais aussi fournir un répertoire bien garni d'adversaires de pratique lors de la compétition. Je me suis par ailleurs entretenue avec Leebly, l'équipe étudiante qui a remporté la compétition, ainsi que SG1, une équipe vétérane qui participé à la phase de "beta test" chaque année.
+À noter que j'ai moi-même expérimenté le jeu dans un cadre assez différent que celui du jour de la compétition : afin de préparer le tournoi, nous sommes invités à jouer le rôle de bêta-testeur pour l'évènement et à concevoir un _bot_ en solo histoire de non seulement trouver et réparer le plus de bogues possibles, mais aussi de fournir un répertoire bien garni d'adversaires de pratique lors de la compétition. Je me suis par ailleurs entretenue avec Leebly, l'équipe étudiante qui a remporté la compétition, ainsi que SG1, une équipe vétérante qui participe à la phase de bêta-test chaque année.
 
 ## L'inévitable lecture des règles du jeu
 
