--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -27,7 +27,7 @@ Sans surprise, avant de pouvoir parler de stratégie pour un jeu, il faut se fam
   <figcaption>Un match à quatre équipes</figcaption>
 </figure>
 
-Chaque équipe commande un vaisseau spacial : le dernier vaisseau survivant est le vainqueur. Les vaisseaux ont bien sûr un nombre de points de vie, qui ne peuvent être régénérés d'aucune façon. Lorsque le vaisseau n'a plus de point de vie, il est éliminé.
+Chaque équipe commande un vaisseau spatial : le dernier vaisseau survivant est le vainqueur. Les vaisseaux ont bien sûr un nombre de points de vie, qui ne peuvent être régénérés d'aucune façon. Lorsque le vaisseau n'a plus de point de vie, il est éliminé.
 
 <figure>
   <img src="{{ site.baseurl }}/images/2024-02-09-coveo-blitz-2024/Blitz-ship.gif">
