--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -36,7 +36,7 @@ Chaque équipe commande un vaisseau spatial : le dernier vaisseau survivant est
 
 À chaque tour de jeu, dit _tick_, les _bots_ de chacune des équipes doivent soumettre la liste d'actions qu'ils veulent effectuer : si le programme cesse de répondre, aucune action n'est exécutée. On ne peut pas contrôler le vaisseau à proprement parler, mais plutôt diriger chacun des quatre membres de son équipage de sorte qu'ils opèrent les différentes stations dispersées à travers celui-ci. Les actions que notre _bot_ peut émettre consistent donc à ordonner à un membre d'équipage de se déplacer vers une position précise, ou alors, s'il se trouve sur une station, de l'opérer. Les amateurs de jeux vidéos ne manqueront pas d'y voir des ressemblances avec quelques-unes des inspirations de nos concepteurs, dont _[FTL: Faster Than Light](https://subsetgames.com/ftl.html)_, _[Lovers in a Dangerous Spacetime](https://www.loversinadangerousspacetime.com/)_, _[Space Rogue](https://store.steampowered.com/app/364300/Space_Rogue/)_ et _[Tarsis](https://www.tharsis.space/)_.
 
-Les matches sont joués avec des vaisseaux distincts dont les stations et leur disposition varient grandement. Il y a cependant toujours les mêmes quatre types de stations à bord du vaisseau : stations d'armes, station de contrôle, station du bouclier et station du radar.
+Les matchs sont joués avec des vaisseaux distincts dont les stations et leur disposition varient grandement. Il y a cependant toujours les mêmes quatre types de station à bord du vaisseau : stations d'armes, station de contrôle, station de bouclier et station de radar.
 
 Les _stations d'armes_ se déclinent en cinq types de tourelles qui ont leurs propres spécificités. Certaines peuvent être orientées dans n'importe quelle direction, d'autres ont une orientation fixe par rapport au centre du vaisseau. Chaque type a également des vitesses et forces d'attaques distinctes, en plus de bonus contre le bouclier ou contre la coque du vaisseau. Elles peuvent toutes être chargées afin de maximiser leur puissance d'attaque.
 
