--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -40,7 +40,7 @@ Les matchs sont joués avec des vaisseaux distincts dont les stations et leur di
 
 Les _stations d'armes_ se déclinent en cinq types de tourelle qui ont leurs propres spécificités. Certaines peuvent être orientées dans n'importe quelle direction, d'autres ont une orientation fixe par rapport au centre du vaisseau. Chaque type a également des vitesses et forces d'attaque distinctes, en plus de bonus contre le bouclier ou contre la coque du vaisseau. Elles peuvent toutes être chargées afin de maximiser leur puissance d'attaque.
 
-La position du vaisseau est fixe dans l'espace. Or, on peut le faire pivoter sur-lui même à partir d'une _station de contrôle_, dite _helm_. Cette station est d'autant plus importante, car c'est la seule façon de repositionner les tourelles fixes du vaisseau pour qu'elles aient les vaisseaux adverses dans leur ligne de mire.
+La position du vaisseau est fixe dans l'espace. Or, on peut le faire pivoter sur lui-même à partir d'une _station de contrôle_, dite _helm_. Cette station est d'autant plus importante, car c'est la seule façon de repositionner les tourelles fixes du vaisseau pour qu'elles aient les vaisseaux adverses dans leur ligne de mire.
 
 Pour ce qui est de la défense, le vaisseau a un bouclier qui se régénère automatiquement à chaque tour. Cependant, une fois le bouclier épuisé, il cessera de se régénérer, et c'est la vie du vaisseau qui est désormais en jeu. Les _stations du bouclier_ permettent de réparer le bouclier ou d'accélérer sa vitesse de régénération lorsqu'il est en fonction.
 
