--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -42,7 +42,7 @@ Les _stations d'armes_ se déclinent en cinq types de tourelle qui ont leurs pro
 
 La position du vaisseau est fixe dans l'espace. Or, on peut le faire pivoter sur lui-même à partir d'une _station de contrôle_, dite _helm_. Cette station est d'autant plus importante, car c'est la seule façon de repositionner les tourelles fixes du vaisseau pour qu'elles aient les vaisseaux adverses dans leur ligne de mire.
 
-Pour ce qui est de la défense, le vaisseau a un bouclier qui se régénère automatiquement à chaque tour. Cependant, une fois le bouclier épuisé, il cessera de se régénérer, et c'est la vie du vaisseau qui est désormais en jeu. Les _stations du bouclier_ permettent de réparer le bouclier ou d'accélérer sa vitesse de régénération lorsqu'il est en fonction.
+Pour ce qui est de la défense, le vaisseau a un bouclier qui se régénère automatiquement chaque tour. Cependant, une fois le bouclier épuisé, il cessera de se régénérer, et c'est la vie du vaisseau qui est désormais en jeu. Les _stations de bouclier_ permettent de réparer le bouclier ou d'accélérer sa vitesse de régénération lorsqu'il est en fonction.
 
 À noter que les attaques des autres joueurs ne sont pas les seules menaces : le combat se déroule au milieu d'un champ d'astéroïdes où sont projetés les débris des autres vaisseaux et du vôtre. Alors que les spectateurs peuvent faire état de tous les projectiles dangereux en un coup d'œil, notre _bot_ lui n'a qu'une perception incomplète son environnement. C'est là qu'entre en jeu le dernier type de stations disponible : les _stations de radar_ permettent de gagner de l'information détaillée sur les adversaires et d'augmenter la distance de détection des débris sur le champ de bataille.
 
