--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -48,7 +48,7 @@ Pour ce qui est de la défense, le vaisseau a un bouclier qui se régénère aut
 
 ## Premières itérations... Et premiers bogues
 
-Lorsqu'on pense stratégie dans ce type de jeu, la balance entre l'offense et la défense entre rapidement en ligne de compte. SG1, par exemple, m'ont dit avoir de manière générale avoir favorisé une stratégie plus défensive, soit manier le shield, détruire les astéroïdes et autres débris, etc. Ils m'ont d'ailleurs rappelé le [principe de l'ours](https://medium.com/the-ascent/you-dont-have-to-outrun-the-bear-cdb52e9613f7) :
+Lorsqu'on pense stratégie dans ce type de jeu, la balance entre l'offense et la défense entre rapidement en ligne de compte. SG1, par exemple, m'ont dit avoir de manière générale avoir favorisé une stratégie plus défensive, soit de manier le bouclier, de détruire les astéroïdes et autres débris, etc. Ils m'ont d'ailleurs rappelé le [principe de l'ours](https://medium.com/the-ascent/you-dont-have-to-outrun-the-bear-cdb52e9613f7) :
 
 > Pas besoin de courir plus vite que l'ours pour s'enfuir. Il suffit de courir plus vite que l'autre à côté de toi.
 
