--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -58,7 +58,7 @@ En compétition, Leebly, une équipe de trois personnes, a pu paralléliser leur
 
 > Une personne qui n’a jamais créé de bogues n’a jamais tenté de programmer.
 
-Vous allez faire des erreurs, c'est inévitable. Heureusement, lorsque l'ensemble des changements introduit est petit, comme c'était le cas pour notre stratégie d'attaque élémentaire, c'est souvent plus facile à détecter et réparer.
+Vous allez faire des erreurs, c'est inévitable. Heureusement, lorsque l'ensemble des changements introduits est petit, comme c'était le cas pour notre stratégie d'attaque élémentaire, c'est souvent plus facile à détecter et à réparer.
 
 Un autre exemple particulièrement coûteux est apparu pendant que j'ai implémenté la priorisation des tours d'attaque : suite à ce changement, il arrivait fréquemment qu'une paire de mes membres d'équipage demeurait en perpétuel mouvement, prisonnier de quelque chose qui s'apparentait à la très embarrassante danse du "toi d'abord - non toi vas-y", et qui n'était certainement pas acceptable dans mon plan de domination intergalactique. Le problème devenait très apparent lorsque je visionnais des matchs. Si je ne m'en étais pas rendue compte rapidement, j'aurais eu bien du mal à identifier la source de mon problème.
 
