--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -64,7 +64,7 @@ Un autre exemple particulièrement coûteux est apparu pendant que j'ai impléme
 
 Peu importe votre stratégie, une implémentation fautive ne la mettra probablement pas en valeur. On ne peut pas complètement éviter les bogues. La clé est plutôt de s'outiller pour détecter et comprendre les problèmes rapidement. À défaut de tests automatisés, le mode local de Blitz est très pratique justement pour expérimenter et valider nos itérations, sans avoir à se commettre. Il nous permet de lancer des parties de notre poste et de les visionner. Et si vous oubliez de vous valider en mode local, il y a toujours les matchs contre les autres équipes.
 
-## Quand "regarder le match" est une vraie question de priorité
+## Quand « regarder le match » est une vraie question de priorité
 
 L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz : alors que je visionnais des matches contre les autres équipes, je me suis rendue compte qu'il m'arrivait d'être éliminée simplement parce qu'un gros astéroïde venait me frapper et enlever la quasi-totalité de mon bouclier d'un coup. J'avais déjà une stratégie élémentaire d'attaque et de défense contre les autres joueurs, mais si moindrement la partie s'allongeait, je n'arrivais pas à survivre la rafale incessante d'astéroïdes alors que les autres si, ce qui n'était pas le cas en début de journée. J'ai opté pour une solution simple : un membre d'équipage dédié à la destruction des gros et moyens débris via une tourelle pivotable, et donc capable de viser rapidement n'importe quelle cible. J'ai raffiné la méthode avec le temps : entre autres, j'ai exclu les astéroïdes dont la trajectoire n'allait pas intersecter mon bouclier et j'ai utilisé le radar anticiper leur venue plus tôt.
 
