--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -68,7 +68,7 @@ Peu importe votre stratégie, une implémentation fautive ne la mettra probablem
 
 L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz : alors que je visionnais des matchs contre les autres équipes, je me suis rendue compte qu'il m'arrivait d'être éliminée simplement parce qu'un gros astéroïde venait me frapper et enlever la quasi-totalité de mon bouclier d'un coup. J'avais déjà une stratégie élémentaire d'attaque et de défense contre les autres joueurs, mais si moindrement la partie s'allongeait, je n'arrivais pas à survivre la rafale incessante d'astéroïdes alors que les autres si, ce qui n'était pas le cas en début de journée. J'ai opté pour une solution simple : un membre d'équipage dédié à la destruction des gros et moyens débris via une tourelle pivotable, et donc capable de viser rapidement n'importe quelle cible. J'ai raffiné la méthode avec le temps : entre autres, j'ai exclu les astéroïdes dont la trajectoire n'allait pas intersecter mon bouclier et j'ai utilisé le radar pour anticiper leur venue plus tôt.
 
-Évidemment, regarder les parties est aussi un bon moment pour espionner la compétition. Pendant longtemps, j'ai favorisé les tourelles pivotables, car elles étaient plus simples à opérer et ne nécessitaient pas une rotation du vaisseau. Néanmoins, après quelques améliorations faites à ma défense, je me rends compte encore une fois que je plafonne dans le classement. Comme la plupart des vaisseaux ont moins de quatre tours pivotables accessibles, il arrive de plus en plus fréquemment qu'un des membres de mon équipage se tourne les pouces. Je m'attèle donc à utiliser les tourelles d'attaque fixes : mais laquelle choisir ? Pour ce faire, je me suis basée sur mes observations des matches jouées : certains de mes adversaires avaient déjà implémenté l'utilisation des tourelles fixes. J'ai remarqué que les stations de tir à haute fréquence avaient tendance à bien complémenter la défense en général, car la cadence ultra-rapide de projectile agit comme un écran sur le champ de bataille. J'ai ajouté ce qu'il fallait pour opérer les tours fixes qui étaient en direction de l'ennemi, en priorisant les tours selon leur type, avec celles qui me semblaient le plus rapide et versatile d'abord. Rapidement ensuite viendra la réorientation du vaisseau afin d'orienter une tourelle de mon type préféré dans la bonne direction. J'avais des vagues idées pour mieux prioriser le type de tours à utiliser en fonction de leur bonus d'attaques par exemple, mais je n'ai jamais eu le temps de m'y pencher sérieusement.
+Évidemment, regarder les parties est aussi un bon moment pour espionner la compétition. Pendant longtemps, j'ai favorisé les tourelles pivotables, car elles étaient plus simples à opérer et ne nécessitaient pas une rotation du vaisseau. Néanmoins, après quelques améliorations faites à ma défense, je me rends compte encore une fois que je plafonne dans le classement. Comme la plupart des vaisseaux ont moins de quatre tours pivotables accessibles, il arrive de plus en plus fréquemment qu'un des membres de mon équipage se tourne les pouces. Je m'attèle donc à utiliser les tourelles d'attaque fixes : mais laquelle choisir ? Pour ce faire, je me suis basée sur mes observations des matchs joués : certains de mes adversaires avaient déjà implémenté l'utilisation des tourelles fixes. J'ai remarqué que les stations de tir à haute fréquence avaient tendance à bien complémenter la défense en général, car la cadence ultrarapide de projectiles agissait comme un écran sur le champ de bataille. J'ai ajouté ce qu'il fallait pour opérer les tours fixes qui étaient en direction de l'ennemi, en priorisant les tours selon leur type, avec celles qui me semblaient le plus rapide et versatile d'abord. Rapidement ensuite viendra la réorientation du vaisseau afin d'orienter une tourelle de mon type préféré dans la bonne direction. J'avais de vagues idées pour mieux prioriser le type de tours à utiliser en fonction de leur bonus d'attaque par exemple, mais je n'ai jamais eu le temps de m'y pencher sérieusement.
 
 Une autre idée que j'ai implémentée est de charger au maximum avant de tirer. Or, c'était difficile d'évaluer à quel point c'était avantageux ou pas dans certaines situations. J'ai donc fait une petite expérience : en local, j'ai opposé le _bot_ avec seulement ce changement contre le _bot_ de ma version précédente. Il s'est avéré que la nouvelle version gagnait constamment contre la précédente. J'ai dès lors adopté le changement et pu constater que je continuais de monter dans le classement. À partir de ce moment, j'ai souvent opposé mon propre _bot_ à sa version antérieure pour valider mes itérations.
 
