--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -72,7 +72,7 @@ L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz 
 
 Une autre idée que j'ai implémentée est de charger au maximum avant de tirer. Or, c'était difficile d'évaluer à quel point c'était avantageux ou pas dans certaines situations. J'ai donc fait une petite expérience : en local, j'ai opposé le _bot_ avec seulement ce changement contre le _bot_ de ma version précédente. Il s'est avéré que la nouvelle version gagnait constamment contre la précédente. J'ai dès lors adopté le changement et pu constater que je continuais de monter dans le classement. À partir de ce moment, j'ai souvent opposé mon propre _bot_ à sa version antérieure pour valider mes itérations.
 
-Il y a plusieurs possibilités à Blitz, et c'est parfois difficile de bien balancer et implémenter certaines stratégies. Lorsque j'ai parlé à SG1 de l'idée de charger les tours, ils m'ont mentionné avoir complètement écarté cette idée, car lorsqu'ils l'ont essayé, ils ont observé qu'ils étaient moins performants. Comme quoi, il y a plusieurs subtilités qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas une autre : de là l'importance de s'auto-évaluer constamment, puis de faire des choix et savoir prioriser en conséquence.
+Il y a plusieurs possibilités à Blitz, et c'est parfois difficile de bien balancer et d'implémenter certaines stratégies. Lorsque j'ai parlé à SG1 de l'idée de charger les tourelles, ils m'ont mentionné avoir complètement écarté cette idée, car lorsqu'ils l'ont essayée, ils ont observé qu'ils étaient moins performants. Comme quoi, il y a plusieurs subtilités qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas une autre : de là l'importance de s'autoévaluer constamment, puis de faire des choix et de savoir prioriser en conséquence.
 
 ## Un Blitz d'itérations
 
