--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -76,7 +76,7 @@ Il y a plusieurs possibilités à Blitz, et c'est parfois difficile de bien bala
 
 ## Un Blitz d'itérations
 
-Dans l'effervescence de la compétition, il est tentant de se plonger dans le code sans interruptions, ajouter le plus de sophistication possible et maximiser notre temps d'implémentation. Or, notre temps est fini, et notre créativité potentiellement infinie : on ne peut pas raisonnablement penser qu'on aura le temps d'implémenter toutes nos idées, alors il faut choisir. 
+Dans l'effervescence de la compétition, il est tentant de se plonger dans le code sans interruption, d'ajouter le plus de sophistication possible et de maximiser notre temps d'implémentation. Or, notre temps est fini, et notre créativité potentiellement infinie : on ne peut pas raisonnablement penser qu'on aura le temps d'implémenter toutes nos idées, alors il faut choisir. 
 
 > De trouver le plus de valeur ajoutée pour le moins d'effort possible, c'est le secret.
 >
