--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -95,7 +95,7 @@ Même si les stratégies de SG1 et de moi-même différaient en plusieurs points
 
 ## La stratégie finale
 
-Lorsque j'ai commencé cet article, j'avais pour sujet "les stratégies de Coveo Blitz 2024". Je pourrais donc conclure en vous parlant des diverses actions que j'ai choisi de prioriser et d'implémenter, soit des scans de radar périodiques, une utilisation du bouclier en cas de dommage critique, une tourelle dédiée à éliminer les plus gros débris et une offensive constante. Or, je crois qu'il serait un peu caduque de s'en tenir à la stratégie que j'ai employée ainsi : en effet, tout cela vaut bien pour le jeu de cette année, mais qu'en est-il des prochaines éditions ? Je préfère de loin la réponse spontanée qu'a fournie Leebly lorsqu'on leur a demandé, suite à leur victoire, qu'elle a été leur stratégie. Sans hésiter, ils ont répondu : on a été itératifs.
+Lorsque j'ai commencé cet article, j'avais pour sujet « les stratégies de Coveo Blitz 2024 ». Je pourrais donc conclure en vous parlant des diverses actions que j'ai choisi de prioriser et d'implémenter, soit des scans de radar périodiques, une utilisation du bouclier en cas de dommage critique, une tourelle dédiée à éliminer les plus gros débris et une offensive constante. Or, je crois qu'il serait un peu caduc de s'en tenir à la stratégie que j'ai employée. En effet, tout cela vaut bien pour le jeu de cette année, mais qu'en est-il pour les prochaines éditions ? Je préfère de loin la réponse spontanée qu'a fournie Leebly lorsqu'on leur a demandé, suite à leur victoire, qu'elle a été leur stratégie. Sans hésiter, ils ont répondu : « On a été itératifs. »
 
 Ainsi, pour mieux résumer la stratégie que j'essaie de mettre en œuvre chaque année, ce serait probablement de suivre ces principes :
 
