--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -106,4 +106,4 @@ Ainsi, pour mieux résumer la stratégie que j'essaie de mettre en œuvre chaque
 
 C'est là la simple description d'une [méthode itérative](https://www.smartsheet.com/iterative-process-guide#:~:text=The%20iterative%20process%20involves%20a,planning%20and%20defining%20overall%20requirements.) : car oui, ici, ça vaut autant pour Blitz que pour n'importe quelle tâche qu'on rencontre en développement logiciel. Parce que oui, cela vaut pour tout : devant toute situation, vous êtes doté d'une créativité infinie, mais votre temps est limité, sachez en faire bon usage !
 
-_Merci à Sébastien Caron, Nicolas Legros et Sébastien Legros, de l'équipe Leebly de s'être entretenu avec moi. Merci également à Andy Emond et Jesse Emond de m'avoir parlé de leurs stratégies et avoir révisé cet article. Enfin, merci à JEAN UN, JEAN DEUX et JEAN TROIS pour avoir révisé cet article._
+_Merci à Sébastien Caron, à Nicolas Legros et à Sébastien Legros, de l'équipe Leebly de s'être entretenus avec moi. Merci également à Andy Emond et à Jesse Emond de m'avoir parlé de leurs stratégies et d'avoir révisé cet article. Enfin, merci à JEAN UN, à JEAN DEUX et à JEAN TROIS d'avoir révisé cet article._
