--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -12,7 +12,7 @@ author:
 
 En janvier dernier avait lieu la 14ᵉ édition de Coveo Blitz, notre [compétition annuelle de programmation pour étudiants](https://www.coveo.com/blog/fr/coveo-blitz-10-ans-en-un-eclair/). Ceux qui sont familiers avec l'évènement reconnaîtront la formule des dernières années : on y présente un jeu de notre cru, puis les participants disposent de 10 heures pour programmer un _bot_ qui saura y jouer et triompher dans des matchs de 2 ou 4 équipes.
 
-Cette année, notre défi revêt le thème de l'espace : chaque équipe est aux commandes de l'équipage d'un vaisseau qui doit affronter d’autres équipes afin d’être le dernier survivant. Nos concepteurs ont concocté un jeu qui était à mon sens l'un des plus sophistiqués, mais aussi des plus complexes des dernières éditions : il y avait une grande variété d'actions possibles, et donc de stratégies à explorer, sans compter certains défis techniques au niveau de l'implémentation. J'aimerais dès lors explorer certaines des stratégies employées lors de la dernière compétition, mais plus important, comment en tant que joueur, on peut s'attaquer à ce genre de défi.
+Cette année, notre défi revêt le thème de l'espace : chaque équipe est aux commandes de l'équipage d'un vaisseau qui doit affronter d’autres équipes afin d’être la dernière survivante. Nos concepteurs ont concocté un jeu qui était à mon sens l'un des plus sophistiqués, mais aussi l'un des plus complexes des dernières éditions : il y avait une grande variété d'actions possibles, et donc de stratégies à explorer, sans compter certains défis techniques au niveau de l'implémentation. J'aimerais dès lors explorer certaines des stratégies employées lors de la dernière compétition, mais plus important, comment en tant que joueur, on peut s'attaquer à ce genre de défi.
 
 <!-- more -->
 
