--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -54,7 +54,7 @@ Lorsqu'on pense stratégie dans ce type de jeu, la balance entre l'attaque et la
 
 Ainsi, leur stratégie va de manière générale consister à favoriser leur survie, et à ensuite catalyser la défaite d'une autre équipe, en priorisant celle qui s'en approche le plus déjà. Personnellement, je suis moins sage et plus sauvage à ma façon : j'ai bêtement commencé avec l'attaque directe par simplicité et un peu par plaisir. En ce sens, puisqu'il faut bien commencer quelque part, je décide d'envoyer tous les membres d'équipage vers les tourelles d'attaque et de tenter d'attaquer immédiatement, sans me soucier de leur orientation ou d'autres critères de performance. 
 
-En compétition, Leebly, une équipe de trois personnes, a pu paralléliser leur travail sur l'offense et la défense. D'ailleurs, leur première itération en termes d'offense était très similaire à la mienne, ou du moins tout aussi rudimentaire. Fait plus cocasse, avec notre technique naïve, Leebly et moi avons introduit le même bogue, à savoir que nous avions négligé d’envoyer les membres d’équipage à des tourelles distinctes. Coincidence ? Peut-être pas tant que ça. Permettez-moi une nouvelle tournure d'un [adage célèbre](http://evene.lefigaro.fr/citation/personne-jamais-commis-erreurs-jamais-tente-innover-40018.php) : 
+En compétition, Leebly, une équipe de trois personnes, a pu paralléliser leur travail sur l'attaque et la défense. D'ailleurs, leur première itération en termes d'attaque était très similaire à la mienne, ou du moins tout aussi rudimentaire. Fait plus cocasse, avec notre technique naïve, Leebly et moi avons introduit le même bogue, à savoir que nous avions négligé d’envoyer les membres d’équipage à des tourelles distinctes. Coincidence ? Peut-être pas tant que ça. Permettez-moi une nouvelle tournure d'un [adage célèbre](http://evene.lefigaro.fr/citation/personne-jamais-commis-erreurs-jamais-tente-innover-40018.php) : 
 
 > Une personne qui n’a jamais créé de bogues n’a jamais tenté de programmer.
 
