--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -60,7 +60,7 @@ En compétition, Leebly, une équipe de trois personnes, a pu paralléliser leur
 
 Vous allez faire des erreurs, c'est inévitable. Heureusement, lorsque l'ensemble des changements introduits est petit, comme c'était le cas pour notre stratégie d'attaque élémentaire, c'est souvent plus facile à détecter et à réparer.
 
-Un autre exemple particulièrement coûteux est apparu pendant que j'ai implémenté la priorisation des tourelles d'attaque : suite à ce changement, il arrivait fréquemment qu'une paire de mes membres d'équipage demeurait en perpétuel mouvement, prisonnier de quelque chose qui s'apparentait à la très embarrassante danse du « toi d'abord - non toi vas-y », et qui n'était certainement pas acceptable dans mon plan de domination intergalactique. Le problème devenait très apparent lorsque je visionnais des matchs. Si je ne m'en étais pas rendue compte rapidement, j'aurais eu bien du mal à identifier la source de mon problème.
+Un autre exemple particulièrement coûteux est apparu pendant que j'ai implémenté la priorisation des tourelles d'attaque : suite à ce changement, il arrivait fréquemment qu'une paire de mes membres d'équipage demeurait en perpétuel mouvement, prisonniers de quelque chose qui s'apparentait à la très embarrassante danse du « toi d'abord - non toi vas-y », et qui n'était certainement pas acceptable dans mon plan de domination intergalactique. Le problème devenait très apparent lorsque je visionnais des matchs. Si je ne m'en étais pas rendue compte rapidement, j'aurais eu bien du mal à identifier la source de mon problème.
 
 Peu importe votre stratégie, une implémentation fautive ne la mettra probablement pas en valeur. On ne peut pas complètement éviter les bogues. La clé est plutôt de s'outiller pour détecter et comprendre les problèmes rapidement. À défaut de tests automatisés, le mode local de Blitz est très pratique justement pour expérimenter et valider nos itérations, sans avoir à se commettre. Il nous permet de lancer des parties de notre poste et de les visionner. Et si vous oubliez de vous valider en mode local, il y a toujours les matchs contre les autres équipes.
 
