--- a/_posts/2024-02-09-coveo-blitz-2024.md
+++ b/_posts/2024-02-09-coveo-blitz-2024.md
@@ -38,7 +38,7 @@ Chaque équipe commande un vaisseau spatial : le dernier vaisseau survivant est
 
 Les matchs sont joués avec des vaisseaux distincts dont les stations et leur disposition varient grandement. Il y a cependant toujours les mêmes quatre types de stations à bord du vaisseau : stations d'armes, stations de contrôle, stations de bouclier et stations de radar.
 
-Les _stations d'armes_ se déclinent en cinq types de tourelles qui ont leurs propres spécificités. Certaines peuvent être orientées dans n'importe quelle direction, d'autres ont une orientation fixe par rapport au centre du vaisseau. Chaque type a également des vitesses et forces d'attaque distinctes, en plus de bonus contre le bouclier ou contre la coque du vaisseau. Elles peuvent toutes être chargées afin de maximiser leur puissance d'attaque.
+Les _stations d'armes_ se déclinent en cinq types de tourelles qui ont leurs propres spécificités. Certaines peuvent être orientées dans n'importe quelle direction, d'autres ont une orientation fixe par rapport au centre du vaisseau. Chaque type a également une vitesse et une force d'attaque distincte, en plus de bonus contre le bouclier ou contre la coque du vaisseau. Elles peuvent toutes être chargées afin de maximiser leur puissance d'attaque.
 
 La position du vaisseau est fixe dans l'espace. Or, on peut le faire pivoter sur lui-même à partir d'une _station de contrôle_, dite _helm_. Cette station est d'autant plus importante, car c'est la seule façon de repositionner les tourelles fixes du vaisseau pour qu'elles aient les vaisseaux adverses dans leur ligne de mire.
 
